--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Document</title>
 </head>
 <body>
- 
-
+  <header>
+    <a href="/home.html">Home</a>
+      <a href="/about.html">About</a>
+        <a href="/contact.html">Contact</a>
+  </header>
+    <h1>We did it</h1>
 </body>
 </html>
