I added a Sidebar with ads

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <a href="/about.html">About</a>
         <a href="/contact.html">Contact</a>
   </header>
+    <aside>
+      <img src="ask.jpg"/>
+    </aside>
     <h1>We did it</h1>
 </body>
 </html>
