--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>Document</title>
 </head>
 <body>
- 
+ <h1>My Website</h1>
+ <ul>
+   <li>one</li>
+   <li>two</li>
+   <li>three</li>
+ </ul>
 
 </body>
 </html>
